<?xml version="1.0" encoding="utf-8"?>
<uz.umarxon.ramazon.widget.BounceScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    tools:context=".DuoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:padding="10dp"
            android:paddingStart="15sp"
            android:text="Saharlik"
            android:textColor="@color/yellow"
            android:textSize="17sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:padding="5dp"
            android:paddingStart="14sp"
            android:text="@string/title_one"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:padding="5dp"
            android:paddingStart="15sp"
            android:text="@string/first_dua"
            android:textColor="#C3C3C3"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <androidx.cardview.widget.CardView
            android:id="@+id/speakb1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="200dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/speak1"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/speak"
                    android:layout_marginStart="5dp"
                    app:tint="@color/purple_700" />

                <TextView
                    android:id="@+id/speakt1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/listen_title"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:padding="10dp"
            android:paddingStart="15sp"
            android:text="Iftorlik"
            android:textColor="@color/yellow"
            android:textSize="17sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:padding="5dp"
            android:paddingStart="14sp"
            android:text="@string/second_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:padding="5dp"
            android:paddingStart="15sp"
            android:text="@string/second_dua"
            android:textColor="#C3C3C3"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <androidx.cardview.widget.CardView
            android:id="@+id/speakb2"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="200dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/speak2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/speak"
                    android:layout_marginStart="5dp"
                    app:tint="@color/purple_700" />

                <TextView
                    android:id="@+id/speakt2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/listen_title"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</uz.umarxon.ramazon.widget.BounceScrollView>